# myCacheSystem

./: .gitignore  CMakeLists.txt  README.md
include/: LRU.hpp  myArcCache.h  myArcCacheNode.h  myArcLfuCachePart.h  myArcLruCachePart.h  myCachePolicy.h  myLfu.h  myLfu.hpp  myLru.h  myLru.hpp
test/: myLruCacheTest.cpp  testAllCachePolicy.cpp
